[WIP] Working on design & layout

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,6 +21,8 @@
 	"extensions": [
 		"rebornix.Ruby",
 		"yzhang.markdown-all-in-one",
+		"esbenp.prettier-vscode",
+		"mrmlnc.vscode-scss"
 	],
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
